--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <body>
     <div class="card">
         <div class="picture">
-            <img src="profile.PNG" alt="Profile Picture">
+            <img src="https://patu2510.github.io/Profile-Card/profile.PNG" alt="Profile Picture">
         </div>
         <div class="main-content">
             <h3 class="name">Prathmesh Jadhav</h3>
